Overflow-x fixing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@ body {
 	font-family: "Dejavu-sans";
   background: #FFFFFF;
   /*color: #FFFFFF;*/
+}
+
+.main_wrap {
   overflow-x: hidden;
 }
 
